[gd_scene load_steps=8 format=3 uid="uid://da4my7r7gkiac"]

[ext_resource type="Texture2D" uid="uid://ciqk617twndpl" path="res://assets/ui/panel_beige.png" id="1_o8246"]
[ext_resource type="Script" uid="uid://dmvh18tp56p4s" path="res://scripts/level_button.gd" id="2_6g3el"]
[ext_resource type="LabelSettings" uid="uid://5llejtc63wu0" path="res://resources/Text_Red_20px.tres" id="2_hrusj"]

[sub_resource type="Animation" id="Animation_ium1h"]
resource_name = "hover_in"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.2, 1.2)]
}

[sub_resource type="Animation" id="Animation_nfgsp"]
resource_name = "hover_out"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1.2, 1.2), Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_b0rp6"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_6acxe"]
_data = {
&"RESET": SubResource("Animation_b0rp6"),
&"hover_in": SubResource("Animation_ium1h"),
&"hover_out": SubResource("Animation_nfgsp")
}

[node name="LevelButton" type="TextureButton"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -50.0
offset_top = -50.0
offset_right = 50.0
offset_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(50, 50)
texture_normal = ExtResource("1_o8246")
script = ExtResource("2_6g3el")

[node name="MC" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1.0
offset_right = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_top = 20

[node name="VBC" type="VBoxContainer" parent="MC"]
layout_mode = 2

[node name="LevelLabel" type="Label" parent="MC/VBC"]
layout_mode = 2
text = "3"
label_settings = ExtResource("2_hrusj")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label" type="Label" parent="MC/VBC"]
layout_mode = 2
text = "1000"
label_settings = ExtResource("2_hrusj")
horizontal_alignment = 1
vertical_alignment = 1

[node name="HoverAnim" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_6acxe")
}

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
